--- a/templates/VP/password_reset_email.html
+++ b/templates/VP/password_reset_email.html
@@ -56,7 +56,7 @@
                         <td style="padding: 30px 40px; background-color: #fafafa; border-top: 1px solid #eeeeee; text-align: left;">
                             <p style="margin: 0; font-size: 13px; color: #888888; line-height: 1.6;">
                                 If you need to reach us, please reply to this email.<br>
-                                Copyright © 2026 BAIUST Robotics & Automation Society. All Rights Reserved.<br>
+                                Copyright © 2026 BAIUST Robotics Society. All Rights Reserved.<br>
                                 BAIUST, Cumilla, Bangladesh.
                             </p>
                         </td>
