feat: add the modify the work

--- a/templates/base.html
+++ b/templates/base.html
@@ -17,8 +17,8 @@
     <nav class="navbar navbar-expand-lg navbar-dark cyber-navbar">
         <div class="container">
             <a class="navbar-brand glow-text" href="{% url 'index' %}">
-                <span class="h3 fw-bold">BAIUST ROBOTICS SOCIETY</span>
-                <small class="d-block text-cyan">Where Innovation takes Wings.</small>
+                <span class="h3 fw-bold">BARS</span>
+                <!-- <small class="d-block text-cyan">Where Innovation takes Wings.</small> -->
             </a>
             
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
